# flutter_android_audio_oboe

./: .metadata  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  build.gradle.kts  settings.gradle  settings.gradle.kts
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/android_audio_oboe_example/: MainActivity.kt
example/assets/: beep_48000_16bit.raw
example/lib/: main.dart
example/lib/ui/: rms_painter.dart  rms_view.dart
lib/: android_audio_oboe.dart  android_audio_oboe_bindings_generated.dart
lib/src/: rms_recorder.dart
src/: CMakeLists.txt  android_audio_oboe.c  android_audio_oboe.h  debug_log.h  oboe_player.cpp  oboe_player.h  oboe_recorder.cpp  oboe_recorder.h
